Updated to 1.18.1 + fix +/- basepos not shifting others in simple mode